# deloxide-evaluation

./: README.md
deloxide-benches-seperated/deloxide-benches/: Cargo.toml  README.md  README.txt  bench_results.txt
deloxide-benches-seperated/deloxide-benches-lock-order-graph/: Cargo.toml  README.md  bench_results.txt
deloxide-benches-seperated/deloxide-benches-stress-test/: Cargo.toml  README.md  bench_results.txt
deloxide-deadlock-tests/: Cargo.toml  README.md  run_tests.sh
deloxide-deadlock-tests/analysis/: DETECTION_ANALYSIS.md  DETECTOR_COMPARISON.md  FALSE_POSITIVE_ANALYSIS.md  analyze_detection_rate.py  compare_detectors.py  run_all_analysis.py  verify_false_positives.py
deloxide-deadlock-tests/deadlock_tests/: dining_philosophers_deloxide.csv  dining_philosophers_deloxide_aggressive.csv  dining_philosophers_deloxide_component_based_delays.csv  dining_philosophers_deloxide_gentle.csv  dining_philosophers_deloxide_lock_order.csv  dining_philosophers_deloxide_random_default.csv  dining_philosophers_no_deadlocks.csv  dining_philosophers_parking_lot.csv  five_lock_cycle_deloxide.csv  five_lock_cycle_deloxide_aggressive.csv  five_lock_cycle_deloxide_component_based_delays.csv  five_lock_cycle_deloxide_gentle.csv  five_lock_cycle_deloxide_lock_order.csv  five_lock_cycle_deloxide_random_default.csv  five_lock_cycle_no_deadlocks.csv  five_lock_cycle_parking_lot.csv  rwlock_deadlock_deloxide.csv  rwlock_deadlock_deloxide_aggressive.csv  rwlock_deadlock_deloxide_component_based_delays.csv  rwlock_deadlock_deloxide_gentle.csv  rwlock_deadlock_deloxide_lock_order.csv  rwlock_deadlock_deloxide_random_default.csv  rwlock_deadlock_no_deadlocks.csv  rwlock_deadlock_parking_lot.csv  three_lock_cycle_deloxide.csv  three_lock_cycle_deloxide_aggressive.csv  three_lock_cycle_deloxide_component_based_delays.csv  three_lock_cycle_deloxide_gentle.csv  three_lock_cycle_deloxide_lock_order.csv  three_lock_cycle_deloxide_random_default.csv  three_lock_cycle_no_deadlocks.csv  three_lock_cycle_parking_lot.csv  two_lock_deloxide.csv  two_lock_deloxide_aggressive.csv  two_lock_deloxide_component_based_delays.csv  two_lock_deloxide_gentle.csv  two_lock_deloxide_lock_order.csv  two_lock_deloxide_random_default.csv  two_lock_no_deadlocks.csv  two_lock_parking_lot.csv
deloxide-deadlock-tests/fp_tests/: complex_lock_order_fp_deloxide.csv  complex_lock_order_fp_deloxide_aggressive.csv  complex_lock_order_fp_deloxide_component_based_delays.csv  complex_lock_order_fp_deloxide_gentle.csv  complex_lock_order_fp_deloxide_lock_order.csv  complex_lock_order_fp_deloxide_random_default.csv  complex_lock_order_fp_no_deadlocks.csv  complex_lock_order_fp_parking_lot.csv  conditional_locking_fp_deloxide.csv  conditional_locking_fp_deloxide_aggressive.csv  conditional_locking_fp_deloxide_component_based_delays.csv  conditional_locking_fp_deloxide_gentle.csv  conditional_locking_fp_deloxide_lock_order.csv  conditional_locking_fp_deloxide_random_default.csv  conditional_locking_fp_no_deadlocks.csv  conditional_locking_fp_parking_lot.csv  four_hier_fp_deloxide.csv  four_hier_fp_deloxide_aggressive.csv  four_hier_fp_deloxide_component_based_delays.csv  four_hier_fp_deloxide_gentle.csv  four_hier_fp_deloxide_lock_order.csv  four_hier_fp_deloxide_random_default.csv  four_hier_fp_no_deadlocks.csv  four_hier_fp_parking_lot.csv  gate_guarded_fp_deloxide.csv  gate_guarded_fp_deloxide_aggressive.csv  gate_guarded_fp_deloxide_component_based_delays.csv  gate_guarded_fp_deloxide_gentle.csv  gate_guarded_fp_deloxide_lock_order.csv  gate_guarded_fp_deloxide_random_default.csv  gate_guarded_fp_no_deadlocks.csv  gate_guarded_fp_parking_lot.csv  lock_free_interval_fp_deloxide.csv  lock_free_interval_fp_deloxide_aggressive.csv  lock_free_interval_fp_deloxide_component_based_delays.csv  lock_free_interval_fp_deloxide_gentle.csv  lock_free_interval_fp_deloxide_lock_order.csv  lock_free_interval_fp_deloxide_random_default.csv  lock_free_interval_fp_no_deadlocks.csv  lock_free_interval_fp_parking_lot.csv  (+32 more)
deloxide-deadlock-tests/guaranteed_deadlock_tests/: guaranteed_condvar_deadlock_deloxide.csv  guaranteed_condvar_deadlock_deloxide_aggressive.csv  guaranteed_condvar_deadlock_deloxide_component_based_delays.csv  guaranteed_condvar_deadlock_deloxide_gentle.csv  guaranteed_condvar_deadlock_deloxide_lock_order.csv  guaranteed_condvar_deadlock_deloxide_random_default.csv  guaranteed_condvar_deadlock_no_deadlocks.csv  guaranteed_condvar_deadlock_parking_lot.csv  guaranteed_dining_philosophers_deloxide.csv  guaranteed_dining_philosophers_deloxide_aggressive.csv  guaranteed_dining_philosophers_deloxide_component_based_delays.csv  guaranteed_dining_philosophers_deloxide_gentle.csv  guaranteed_dining_philosophers_deloxide_lock_order.csv  guaranteed_dining_philosophers_deloxide_random_default.csv  guaranteed_dining_philosophers_no_deadlocks.csv  guaranteed_dining_philosophers_parking_lot.csv  guaranteed_rwlock_deadlock_deloxide.csv  guaranteed_rwlock_deadlock_deloxide_aggressive.csv  guaranteed_rwlock_deadlock_deloxide_component_based_delays.csv  guaranteed_rwlock_deadlock_deloxide_gentle.csv  guaranteed_rwlock_deadlock_deloxide_lock_order.csv  guaranteed_rwlock_deadlock_deloxide_random_default.csv  guaranteed_rwlock_deadlock_no_deadlocks.csv  guaranteed_rwlock_deadlock_parking_lot.csv  guaranteed_three_lock_deloxide.csv  guaranteed_three_lock_deloxide_aggressive.csv  guaranteed_three_lock_deloxide_component_based_delays.csv  guaranteed_three_lock_deloxide_gentle.csv  guaranteed_three_lock_deloxide_lock_order.csv  guaranteed_three_lock_deloxide_random_default.csv  guaranteed_three_lock_no_deadlocks.csv  guaranteed_three_lock_parking_lot.csv  guaranteed_two_lock_deloxide.csv  guaranteed_two_lock_deloxide_aggressive.csv  guaranteed_two_lock_deloxide_component_based_delays.csv  guaranteed_two_lock_deloxide_gentle.csv  guaranteed_two_lock_deloxide_lock_order.csv  guaranteed_two_lock_deloxide_random_default.csv  guaranteed_two_lock_no_deadlocks.csv  guaranteed_two_lock_parking_lot.csv
deloxide-deadlock-tests/src/: main.rs  test_harness.rs
(+61 files in other folders)
