[package]
name = "deadlock-detector-benchmark"
version = "0.1.0"
edition = "2024"

[lib]
name = "deadlock_detector_benchmark"
path = "src/lib.rs"

[[bin]]
name = "two_lock"
path = "src/bin/two_lock.rs"

[[bin]]
name = "three_lock_cycle"
path = "src/bin/three_lock_cycle.rs"

[[bin]]
name = "gate_guarded_fp"
path = "src/bin/gate_guarded_fp.rs"

[[bin]]
name = "four_hier_fp"
path = "src/bin/four_hier_fp.rs"

[[bin]]
name = "dining_philosophers"
path = "src/bin/dining_philosophers.rs"

[[bin]]
name = "rwlock_deadlock"
path = "src/bin/rwlock_deadlock.rs"

[[bin]]
name = "five_lock_cycle"
path = "src/bin/five_lock_cycle.rs"

[[bin]]
name = "producer_consumer_fp"
path = "src/bin/producer_consumer_fp.rs"

[[bin]]
name = "lock_free_interval_fp"
path = "src/bin/lock_free_interval_fp.rs"

[[bin]]
name = "conditional_locking_fp"
path = "src/bin/conditional_locking_fp.rs"

[[bin]]
name = "read_dominated_fp"
path = "src/bin/read_dominated_fp.rs"

[[bin]]
name = "thread_local_hierarchy_fp"
path = "src/bin/thread_local_hierarchy_fp.rs"

[[bin]]
name = "lock_order_inversion_fp"
path = "src/bin/lock_order_inversion_fp.rs"

[[bin]]
name = "complex_lock_order_fp"
path = "src/bin/complex_lock_order_fp.rs"

[[bin]]
name = "guaranteed_two_lock"
path = "src/bin/guaranteed_two_lock.rs"

[[bin]]
name = "guaranteed_three_lock"
path = "src/bin/guaranteed_three_lock.rs"

[[bin]]
name = "guaranteed_dining_philosophers"
path = "src/bin/guaranteed_dining_philosophers.rs"

[[bin]]
name = "guaranteed_rwlock_deadlock"
path = "src/bin/guaranteed_rwlock_deadlock.rs"

[[bin]]
name = "guaranteed_condvar_deadlock"
path = "src/bin/guaranteed_condvar_deadlock.rs"

[features]
parking_lot_deadlock = ["parking_lot"]
deloxide = ["dep:deloxide"]
no_deadlocks = ["dep:no_deadlocks"]
deloxide_component_based_delays = ["dep:deloxide", "deloxide/stress-test"]
deloxide_random_default = ["dep:deloxide", "deloxide/stress-test"]
deloxide_aggressive = ["dep:deloxide", "deloxide/stress-test"]
deloxide_gentle = ["dep:deloxide", "deloxide/stress-test"]
deloxide_lock_order = ["dep:deloxide", "deloxide/lock-order-graph"]

[dependencies]
# Required dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
rand = "0.9.2"

# Optional deadlock detection libraries
parking_lot = { version = "0.12", optional = true, features = ["deadlock_detection"] }
deloxide = { version = "1.0", optional = true }
no_deadlocks = { version = "1.3.2", optional = true }
libc = "0.2.172"