[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["stress_random"]
stress_random = ["deloxide/stress-test"]
stress_component = ["deloxide/stress-test"]
stress_aggressive = ["deloxide/stress-test"]
stress_gentle = ["deloxide/stress-test"]
deloxide_lock_order = ["deloxide/lock-order-graph"]
deloxide = ["dep:deloxide"]
parking_lot_deadlock = ["dep:parking_lot"]
no_deadlocks = ["dep:no_deadlocks"]
use_std = []

[dependencies]
image = "0.13.0"
palette = "0.6.0"
assert_approx_eq = "1.1.0"
rand = "0.8.4"
jpeg-decoder = "0.2.1"
crossbeam = "0.8"
rayon = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.9.4"
deloxide = { version = "1.0", optional = true }
parking_lot = { version = "0.12", features = ["deadlock_detection"], optional = true }
no_deadlocks = { version = "1.3", optional = true }